--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "babel-plugin-inferno": "^1.7.0",
     "bulma": "^0.3.1",
+    "history": "^4.5.1",
     "inferno": "^1.2.2",
-    "inferno-component": "^1.2.2"
+    "inferno-component": "^1.2.2",
+    "inferno-router": "^1.2.2"
   },
   "scripts": {
     "start": "inferno-scripts start",
