--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "inferno-scripts": "0.12.0"
   },
   "dependencies": {
@@ -11,6 +12,7 @@
     "history": "^4.5.1",
     "inferno": "^1.2.2",
     "inferno-component": "^1.2.2",
+    "inferno-redux": "^1.2.2",
     "inferno-router": "^1.2.2"
   },
   "scripts": {
