--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "plugins": ["transform-es2015-template-literals"]
+  "presets": [
+    ["es2015", { "modules": false }],
+    "stage-2"
+  ],
+  "plugins": ["transform-runtime"],
+  "comments": false,
+  "env": {
+    "test": {
+      "plugins": [ "istanbul" ]
+    }
+  }
 }
