--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
 .DS_Store
-.env
+node_modules/
+dist/
 npm-debug.log
-.idea
-play.js
+test/unit/coverage
+test/e2e/reports
+selenium-debug.log
+old/
