--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "bulma": "^0.3.1",
     "vue": "^2.1.10",
-    "vue-router": "^2.2.0"
+    "vue-logger": "^1.0.0",
+    "vue-router": "^2.2.0",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
