--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.1.10",
     "vue-logger": "^1.0.0",
     "vue-router": "^2.2.0",
-    "vuex": "^2.1.1"
+    "vuex": "^2.1.1",
+    "vuex-persistedstate": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
